epsm workshop notebooks

--- a/notebooks/2022-11-epsm-ai-workshop.ipynb
+++ b/notebooks/2022-11-epsm-ai-workshop.ipynb
@@ -2,23 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "646f237c",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/RadiotherapyAI/rai/blob/d1292c8b4e1f7bfd3352876c3f1677adc804d164/workshops/epsm-2022-ai-workshop.ipynb\" target=\"_window\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3db8ba2d",
    "metadata": {
     "id": "3db8ba2d"
    },
    "source": [
-    "# U-Net Workshop\n",
+    "# Building our own 2D UNet\n",
     "\n",
     "Here is an example 2D U-Net implementation using minified data based upon creative commons dataset available at https://wiki.cancerimagingarchive.net/display/Public/HNSCC."
    ]
@@ -32,7 +21,8 @@
    },
    "outputs": [],
    "source": [
-    "# Copyright (C) 2022 Radiotherapy AI Holdings Pty Ltd\n",
+    "# RAi, machine learning solutions in radiotherapy\n",
+    "# Copyright (C) 2021-2022 Radiotherapy AI Holdings Pty Ltd\n",
     "\n",
     "# This program is free software: you can redistribute it and/or modify\n",
     "# it under the terms of the GNU Affero General Public License as\n",
@@ -50,6 +40,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d19f6f2e-ec37-47be-acbc-94bd2cee0d08",
+   "metadata": {},
+   "source": [
+    "![full-logo.png](https://raw.githubusercontent.com/RadiotherapyAI/rai/cf28222913602aaab59c3f2d0a0039be2c96e840/notebooks/img/full-logo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bad6ea9-2eed-45ad-8550-a0d95b846a73",
+   "metadata": {},
+   "source": [
+    "# Disclosure of Conflict of Interest\n",
+    "\n",
+    "Simon Biggs, the presenter of this workshop owns Radiotherapy AI which is building an open source autocontouring library from which a Medical Device is being built."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "21387b8b-76e4-4aa8-807b-2b5f81d5cdd9",
    "metadata": {
     "id": "21387b8b-76e4-4aa8-807b-2b5f81d5cdd9"
@@ -57,352 +65,9 @@
    "source": [
     "## Overview\n",
     "\n",
-    "* What is possible\n",
-    "  * Demonstrate the open source `rai` library\n",
-    "* Building our own 2D UNet\n",
-    "  * Data pipeline\n",
-    "  * The pieces of a UNet\n",
-    "  * Training the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b456a83-6c72-4f0c-8075-7e0e70a8089a",
-   "metadata": {},
-   "source": [
-    "## What is possible with the open source `rai` library\n",
-    "\n",
-    "### Installing and importing the library"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f974259-0a58-4e19-a6a7-83e18a6778cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c7d92e1-b929-4ec9-a7b5-a8c142143a99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install rai==0.2.0-dev0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bc1660e-2269-4594-a9c7-2ff3d315eb38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pydicom\n",
-    "pydicom.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05cb08df-7356-4d45-a91d-d511581fdee1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rai\n",
-    "rai.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "274307db-188d-4f42-ad74-1b133c1ac991",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import raicontours\n",
-    "from raicontours import TG263\n",
-    "raicontours.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ceb21f94-01d0-4f76-8454-9438341d63de",
-   "metadata": {},
-   "source": [
-    "### Loading the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db1bd1cf-c528-4754-88a1-19fb8041b8dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raicontours.cfg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fd50888-89a4-4bea-8730-1325a4204c49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rai_model = rai.load_model(cfg=raicontours.cfg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a7e43d4-ac40-443b-9805-7eee7dffa957",
-   "metadata": {},
-   "source": [
-    "### Downloading some example DICOM data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "939a6bf5-7935-4b13-99d0-73feb95576fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_paths, structure_path = rai.download_deepmind_example(\"data/deepmind\")\n",
-    "structure_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e43a52c2-7bdd-4ee6-9902-f080531f4080",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_grid, y_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
-    "    image_paths\n",
-    ")\n",
-    "\n",
-    "image_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc5d26b2-e639-414a-a97b-1b3970a45f4c",
-   "metadata": {},
-   "source": [
-    "### Running the inference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9b36d39-0a04-4652-ae67-f30e35ebbb00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_patch = image_stack[None, 13:77, 153:217, 228:292]\n",
-    "image_patch.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "effc6e4c-98a5-4c15-be41-5c74ac1e597e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_masks = rai_model.predict(image_patch)\n",
-    "output_masks.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d8a1897-beb7-4258-abf8-bf8f0d712843",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit -n 1 -r 1\n",
-    "\n",
-    "z = [35, 45, 55]\n",
-    "y = [140, 155, 175, 195, 215, 230]\n",
-    "x = [210, 230, 250, 270, 290, 310]\n",
-    "\n",
-    "# Workaround for https://github.com/jupyter/notebook/issues/4532\n",
-    "global predicted_masks\n",
-    "\n",
-    "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    model=rai_model, image_stack=image_stack, grid=(z, y, x)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26905a76-9466-4620-a967-b734c7ff2c31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_masks.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65df131d-745c-4b42-916e-1b7868ea3c82",
-   "metadata": {},
-   "source": [
-    "### Extracting contours from the result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2610960-c47f-407e-af28-d039c8bd5bb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    x_grid, y_grid, predicted_masks\n",
-    ")\n",
-    "\n",
-    "predicted_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95f7c01f-ae73-473f-ba63-c5569e0402ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rai.plot_contours_by_structure(\n",
-    "    x_grid, y_grid, image_stack, predicted_contours_by_structure\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8cd7ddb-f4fb-4af1-9370-f11f3d2c4100",
-   "metadata": {},
-   "source": [
-    "### Compare results to the DICOM-RT Structure file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7ae5afe-fddd-485d-b2ea-ed73e13bd303",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_ds = pydicom.read_file(structure_path)\n",
-    "[item.ROIName for item in structure_ds.StructureSetROISequence]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "967d9d1f-f76d-4a77-a240-baa4beb2fe81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "align_map = {\n",
-    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
-    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
-    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
-    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
-    "    \"Lens-Lt\": [TG263.Lens_L],\n",
-    "    \"Lens-Rt\": [TG263.Lens_R],\n",
-    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
-    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
-    "    # If there was an \"Eyes\" structure, would do the following:\n",
-    "    # \"Eyes\": [TG263.Eye_L, TG263.Eye_R]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74a73803-96f5-48af-a3e1-4287407a5bfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names = list(align_map.keys())\n",
-    "structure_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2104fc56-49b4-45b7-ab48-034eb1099bca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
-    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    ")\n",
-    "dicom_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f79231a5-b6bb-41d8-953e-c19d2a3eb9da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "    predicted_contours_by_structure, align_map\n",
-    ")\n",
-    "aligned_predicted_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "288524c2-a52d-44cb-8f95-24dc40a0e35d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dice = {}\n",
-    "for name in align_map:\n",
-    "    dice[name] = rai.dice_from_contours_by_slice(\n",
-    "        dicom_contours_by_structure[name],\n",
-    "        aligned_predicted_contours_by_structure[name],\n",
-    "    )\n",
-    "\n",
-    "dice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc9f846a-8a3f-4297-b828-f9f5c5f0fb87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_contours_by_structure = {\n",
-    "    **predicted_contours_by_structure,\n",
-    "    **dicom_contours_by_structure,\n",
-    "}\n",
-    "\n",
-    "rai.plot_contours_by_structure(\n",
-    "    x_grid, y_grid, image_stack, combined_contours_by_structure, align_map\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8852c6a7-ace4-4e39-933c-ca168156e6f1",
-   "metadata": {},
-   "source": [
-    "## Building our own UNet"
+    "* Data pipeline\n",
+    "* The pieces of a UNet\n",
+    "* Training the model"
    ]
   },
   {
@@ -559,6 +224,7 @@
     "data_directory = pathlib.Path(\"data/hnscc\")\n",
     "\n",
     "if not data_directory.exists():\n",
+    "    data_directory.mkdir(parents=True)\n",
     "    urllib.request.urlretrieve(zip_url, zip_filepath)\n",
     "    shutil.unpack_archive(zip_filepath, data_directory)"
    ]
@@ -1452,26 +1118,6 @@
    "source": [
     "model = unet(GRID_SIZE, NUM_CONTOURS)\n",
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e677373a-5357-47e1-8ae5-df59081b6973",
-   "metadata": {},
-   "source": [
-    "### Comparison to RAi model\n",
-    "\n",
-    "The model we have built above is actually very similar to the `rai` model used at the beginning of this workshop. The main difference being that the `rai` model is a 3D UNet, whereas we're building a 2D UNet."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acf66978-8106-4369-85fa-1c3ff9f22373",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rai_model.summary()"
    ]
   },
   {
